Fixes 2 password visibility icons
In IE when user enters invalid password twice the two icons shows up
in the password field. So this patch removes the extra icon from the
password field.

Closes-bug: #1408184

--- a/openstack_dashboard/static/dashboard/scss/horizon.scss
+++ b/openstack_dashboard/static/dashboard/scss/horizon.scss
@@ -2155,3 +2155,7 @@ a:hover.link-popover { text-decoration: none; }
 .detail dt {
   text-align: left;
 }
+
+input::-ms-clear, input::-ms-reveal{
+  display: none;
+}
